# modern_legacy

./: Cargo.toml  LICENSE  README.md
assets/: bytecode.tsv  disasm.py  exp.c  writeup.md
script/: Pack-Challenge.ps1  gen_name.py
src/: main.rs
src/macros/: lib.rs
src/runtime/: alphabet.rs  instr.rs  io.rs  mem.rs  mod.rs  vm.rs
